팝업을 했다...... 안됐던 이유는 fixed content가 z-index상 single content 아래에 깔려있어서...

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,32 @@
   box-sizing: border-box;
 }
 
+@namespace svg url(http://www.w3.org/2000/svg);
+html,body,svg {
+  /* height:100%  */
+  }/* As SVG does not provide a default visual style for links,
+   it's considered best practice to add some */
+
+@namespace svg url(http://www.w3.org/2000/svg);
+/* Necessary to select only SVG <a> elements, and not also HTML’s.
+   See warning below */
+
+svg|a:link, svg|a:visited {
+  cursor: pointer;
+}
+
+svg|a text,
+text svg|a {
+  fill: blue; /* Even for text, SVG uses fill over color */
+  text-decoration: underline;
+}
+
+svg|a:hover, svg|a:active {
+  outline: dotted 1px blue;
+}
+
+
+
 .item {
   width: 200px;
   height: 200px;
@@ -14,7 +40,7 @@
 }
 
 .sinuiju {
-
+  /* display:inline-block; */
 }
 
 .hyesan {
@@ -170,8 +196,8 @@ body.white *:not(.change_color_page) {
   left: 0;
   right: var(--scrollbar-size, 0px);
   bottom: 0;
-  z-index: 2;
-  pointer-events: none;
+  z-index: 20;
+  /* pointer-events: none; */
 }
 
 .scroll-container {
